--- a/src/index.scss
+++ b/src/index.scss
@@ -13,3 +13,15 @@ body {
 button:disabled {
   opacity: 0.5;
 }
+
+.container {
+  text-align: center;
+
+  .row {
+    padding-top: 1em;
+  }
+}
+
+button {
+  width: 100%;
+}
